rename css class

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html {
     box-sizing: inherit;
 }
 
-.site {
+.body {
     font-family: 'Poppins', sans-serif;
     background-color: hsl(53, 29%, 89%);
     max-width: 1000px;
