--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ html {
     width: 100%;
     margin: 0 auto;
     padding: 50px;
+    background-image: url("../photo/background_photo.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .form__labelText {
