--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,10 @@ html {
     margin: 0 auto;
     padding: 50px;
     background-image: url("../photo/background_photo.png");
-    background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: bottom;
+    background-size: contain;
+    background-attachment: fixed;
 }
 
 .form__labelText {
